# anime-recommendation

./: .gitignore  GEMINI.md  README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: Dockerfile  GEMINI.md  fetch_anime.py  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/routers/: animes.py  ping.py  watchlist.py
backend/app/schemas/: animes.py  watchlist.py
backend/app/utils/: anime_api.py  auth0_security.py  chatbot.py  clean_text.py  embeddings.py  fetch_status.py  similarity.py  validate_params.py  watchlist.py
frontend/: GEMINI.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AnimeCard.tsx  AnimeFilter.tsx  Chatbot.tsx  Error.tsx  Footer.tsx  GenreFilter.tsx  GenreHighlights.tsx  Loader.tsx  Navbar.tsx  SearchBar.tsx  ThemeToggle.tsx  TopRatedList.tsx
frontend/src/hooks/: useMediaQuery.ts
frontend/src/pages/: AnimeDetails.tsx  Browse.tsx  Genres.tsx  Home.tsx  Recommendations.tsx  SuggestAnime.tsx  Watchlist.tsx
frontend/src/services/: api.ts
frontend/src/types/: anime.ts  watchlist.ts
